apps/jellyseerr/jellyseerr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: apps
spec:
  selector:
    app: jellyseerr
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 5055
      nodePort: 31055
